--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700;800&display=swap");
 @font-face {
     font-family: "Pretendard-Regular";
     src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
@@ -5,7 +6,6 @@
     font-weight: 400;
     font-style: normal;
 }
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700;800&display=swap");
 
 * {
     margin: 0;
@@ -13,7 +13,7 @@
     box-sizing: border-box;
 }
 
-:root {
+body {
     background-color: #111211;
     overflow-x: hidden;
 }
