--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,20 @@
     font-weight: 400;
     font-style: normal;
 }
+@font-face {
+    font-family: "Pretendard-Bold";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff")
+        format("woff");
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Pretendard-Extrabold";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff")
+        format("woff");
+    font-weight: 800;
+    font-style: normal;
+}
 * {
     margin: 0;
     padding: 0;
